force-app/main/default/objects/Recommended_Meeting_Type__c/Recommended_Meeting_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Updates Recommended meeting Type on Lead</description>
    <label>Recommended Meeting Type</label>
</CustomObject>