force-app/main/default/objects/Recommended_Meeting_Type__c/fields/Max_Distance__c.field-meta.xml
<CustomField>
    <fullName>Max_Distance__c</fullName>
    <label>Max Distance ( =&lt; )</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>