force-app/main/default/objects/Recommended_Meeting_Type__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>