force-app/main/default/objects/Recommended_Meeting_Type__c/fields/Min_Distance__c.field-meta.xml
<CustomField>
    <fullName>Min_Distance__c</fullName>
    <label>Min Distance ( &gt; )</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>