force-app/main/default/objects/Recommended_Meeting_Type__c/fields/ShowRoom_Name__c.field-meta.xml
<CustomField>
    <fullName>ShowRoom_Name__c</fullName>
    <label>ShowRoom Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>